[package]
name = "axum-typed-websockets"
version = "0.6.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "axum::extract::ws with type safe messages"
edition = "2021"
homepage = "https://github.com/davidpdrsn/axum-typed-websockets"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-typed-websockets"

[features]
default = ["json"]
json = ["serde_json"]
msgpack = ["rmp-serde"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["net"] }
axum = { version = "0.8", features = ["ws"] }
